add JVM arguments for accelerated MSFragger